Super Tandem Boost

--- a/characters/views/details.html
+++ b/characters/views/details.html
@@ -674,6 +674,16 @@
                                         <add-super-tandem-query criteria="details.superTandem.characterCondition[4]" excluded-families="families"></add-super-tandem-query>
                                     </td>
                                 </tr>
+                                <tr ng-if="details.superTandemBoost">
+                                    <td>Super Tandem Boost</td>
+                                    <td>
+                                        <span ng-if="details.superTandemBoost.condition"><strong>Condition:</strong> <span ng-bind-html="details.superTandemBoost.condition | decorate"></span></span>
+                                        <div ng-repeat="item in details.superTandemBoost.description track by $index"><strong>Level {{::$index + 1}} (<span ng-bind-html="details.superTandemBoost.characterCondition[$index] | decorate"></span>):</strong>
+                                        <span ng-bind-html="item | decorate"></span><br></div>
+                                        <span class="notes" ng-if="details.superTandemBoostNotes" ng-bind-html="details.superTandemBoostNotes | notes | decorate"></span>
+                                        <add-super-tandem-query criteria="details.superTandemBoost.characterCondition[4]" excluded-families="families"></add-super-tandem-query>
+                                    </td>
+                                </tr>
                                 <tr ng-if="details.rush">
                                     <td>Rush</td>
                                     <td border-spacing="0px">
