--- a/characters/views/sidebar.html
+++ b/characters/views/sidebar.html
@@ -285,7 +285,7 @@
     <span class="filter width-12 exc" ng-model="filters.globalPKA" ng-class="{ active: filters.globalPKA }"
         ng-click="filters.globalPKA = !filters.globalPKA">Pirate King Adventure Boosters [York]</span>
     <span class="filter width-12 exc" ng-model="filters.comodorevsempress" ng-class="{ active: filters.comodorevsempress }"
-        ng-click="filters.comodorevsempress = !filters.comodorevsempress">Blitz Battle Boosters [VS S-Hawk]</span>
+        ng-click="filters.comodorevsempress = !filters.comodorevsempress">Blitz Battle Boosters [VS Kizaru]</span>
     <!--span class="filter width-6 exc" ng-model="filters.japanKC" ng-class="{ active: filters.japanKC }"
         ng-click="filters.japanKC = !filters.japanKC">Show Japan KC Boosters [Basil Hawkins]</span-->
     <!--span class="filter width-12 exc" ng-model="filters.odenKaidoBlitz" ng-class="{ active: filters.odenKaidoBlitz }"
