--- a/characters/views/sidebar.html
+++ b/characters/views/sidebar.html
@@ -283,7 +283,7 @@
     <span class="filter width-12 exc" ng-model="filters.globalKC" ng-class="{ active: filters.globalKC }"
         ng-click="filters.globalKC = !filters.globalKC">Kizuna Clash Boosters [Sabo & Koala]</span>
     <span class="filter width-12 exc" ng-model="filters.globalPKA" ng-class="{ active: filters.globalPKA }"
-        ng-click="filters.globalPKA = !filters.globalPKA">Pirate King Adventure Boosters [Bonney]</span>
+        ng-click="filters.globalPKA = !filters.globalPKA">Pirate King Adventure Boosters [Boa Hancock]</span>
     <span class="filter width-12 exc" ng-model="filters.comodorevsempress" ng-class="{ active: filters.comodorevsempress }"
         ng-click="filters.comodorevsempress = !filters.comodorevsempress">Blitz Battle Boosters [VS Kizaru]</span>
     <!--span class="filter width-6 exc" ng-model="filters.japanKC" ng-class="{ active: filters.japanKC }"
