Add character log importer feature

--- a/characters/views/sidebar.html
+++ b/characters/views/sidebar.html
@@ -513,4 +513,7 @@
         ng-click="filters.noLog = !filters.noLog">Hide units in Character Log</span>
     <span class="filter width-12 custom" ng-model="filters.noMissing" ng-class="{ active: filters.noMissing }"
         ng-click="filters.noMissing = !filters.noMissing">Hide units not in Character Log</span>
+    <span class="filter width-12 custom" ng-click="exportCharacterLog()">Export Character Log</span>
+    <span class="filter width-12 custom" ng-click="importCharacterLog()">Import Character Log</span>
+    <input type="file" id="importFileInput" style="display: none;" />
 </div>
