Fix Light Mode Bug

--- a/characters/views/sidebar.html
+++ b/characters/views/sidebar.html
@@ -67,7 +67,7 @@
         <i class="pull-right fa fa-{{filters.tagEnabled ? 'chevron-up' : 'chevron-down'}}"></i>
     </span>
 
-    <label style="margin: 5px 0 10px 5px; color: white;">
+    <label class="filter width-12 tags">
         <input type="checkbox" style="margin-right: 5px;" ng-model="filters.tagsStrict">
         Match all selected tags
     </label>
